# MIPT_Metaprogramming

./: README.md
1/: CMakeLists.txt  README.md  build.sh  main.cpp  typelist.hpp
1/tests/: CMakeLists.txt
1/tests/include/: test_creation.cpp  test_creation.hpp
2/: README.md  abstract_factory.hpp  hierarchy.hpp  typelist.hpp  types.hpp
2/tests/: CMakeLists.txt
2/tests/include/: test_append.hpp  test_erase.hpp  test_factory.hpp  test_reverse.hpp
2/tests/src/: test_append.cpp  test_creation.cpp  test_erase.cpp  test_factory.cpp  test_reverse.cpp
3/: README.md  longevity.hpp
3/tests/: CMakeLists.txt
3/tests/include/: test_longevity.hpp  test_main.hpp
3/tests/src/: test_longevity.cpp
